--- a/application/index/view/common/header1.html
+++ b/application/index/view/common/header1.html
@@ -121,17 +121,11 @@
                 <a href="tel:{$website['tel']}"><i class="fas fa-phone"></i> {$website['tel']}</a>
                 <a href="mailto:{$website['email']}"><i class="fas fa-envelope"></i> {$website['email']}</a>
             </div>
-            <div class="language-selector" style="display: none;">
-                <select>
-                    <option>简体中文</option>
-                    <option>English</option>
-                </select>
-            </div>
         </div>
 
         <div class="main-nav container">
             <div class="logo">
-                <a class="navbar-brand" href="/"><img src="https://dtc.gogo198.net/{$website['ico']}" alt="logo"/></a>
+                <a class="navbar-brand" href="javascript:void(0);"><img src="https://dtc.gogo198.net/{$website['ico']}" alt="logo"/></a>
 <!--                <h1>慧安通</h1>-->
             </div>
 
