--- a/application/index/view/index/shop_frontend/goods_list.html
+++ b/application/index/view/index/shop_frontend/goods_list.html
@@ -547,6 +547,7 @@
 <link rel="stylesheet" href="shop/js/chosen/chosen.css?v=1.2"/>
 <script src="shop/js/chosen/jquery.chosen.js?v=1.3"></script>
 {include file="layouts/footer"}
+{include file="layouts/right_slide"}
 <script>
     var currency_sel = "{$currency_sel}";
 
