--- a/application/index/view/layouts/right_slide.html
+++ b/application/index/view/layouts/right_slide.html
@@ -21,19 +21,19 @@
 
     /**弹窗**/
     .windowMask{display: none;width: 100%;height:100%;position: fixed;top:0;left:0;background:rgba(0,0,0,0.5);z-index:19;}
-    .windowBox{display: none;position: fixed;top:50%;left:50%;transform: translate(-50%,-50%);z-index: 20;width: 950px;height:635px;border:2px solid {$websites['color']};box-shadow: 0px 0px 8px 0px #797777;border-radius: 25px;background:#fff;box-sizing: border-box;}
+    .windowBox{display: none;position: fixed;top:50%;left:50%;transform: translate(-50%,-50%);z-index: 20;width: 950px;height:635px;border:2px solid {$data['websites']['info']['color']};box-shadow: 0px 0px 8px 0px #797777;border-radius: 25px;background:#fff;box-sizing: border-box;}
     .windowBox *{box-sizing: border-box;}
     .windowBox .close{position: absolute;right: -25px;top: -27px;background: #fff;border-radius: 50%;cursor:pointer;}
     .windowBox .close img{width:45px;height:45px;}
     .windowBox .windowDiv{width: 100%;height:100%;overflow: hidden;}
     .windowBox .leftBox{width: 30%;height:100%;border-top-left-radius: 22px;border-bottom-left-radius: 22px;overflow: hidden;cursor:pointer;}
     .windowBox .leftBox img{width: 100%;height:100%;}
-    .windowBox .rightBox{width: 71%;height:100%;background:{$websites['color']};border-bottom-right-radius: 25px;}
+    .windowBox .rightBox{width: 71%;height:100%;background:{$data['websites']['info']['color']};border-bottom-right-radius: 25px;}
     .windowBox .rightBox .levelList1{width:97%;padding: 0 10px 0 30px;position: relative;box-sizing: border-box;}
     .windowBox .rightBox .levelList1 .innerContent{width: 100%;overflow: hidden;border: 1px solid #fff;border-top:0;border-bottom: 0;}
     .windowBox .rightBox .levelList1 .turnleft{position: absolute;border-top: 2px solid #fff;border-right: 2px solid #fff;width: 12px;height: 12px;top: 35%;left: 2%;transform: rotate(225deg);cursor:pointer;}
     .windowBox .rightBox .levelList1 .turnright{position: absolute;border-top: 2px solid #fff;border-right: 2px solid #fff;width: 12px;height: 12px;top: 35%;right: -1%;transform: rotate(45deg);cursor:pointer;}
-    .windowBox .rightBox .levelList1 .levelItem{padding:10px 39.85px;font-size: 18px;font-weight:800;display: table-cell;color:#fff;background:{$websites['color']};border-right:1px solid #fff;cursor: pointer;white-space: nowrap;box-sizing: border-box;}
+    .windowBox .rightBox .levelList1 .levelItem{padding:10px 39.85px;font-size: 18px;font-weight:800;display: table-cell;color:#fff;background:{$data['websites']['info']['color']};border-right:1px solid #fff;cursor: pointer;white-space: nowrap;box-sizing: border-box;}
     .windowBox .rightBox .levelList1 .levelItem:last-child{/**border-right: 0;**/}
     .windowBox .rightBox .levelList1 .levelItem:hover{background:#e60000;position: relative;}
     .windowBox .rightBox .levelList1 .levelActive{background:#e60000;position: relative;}
@@ -48,11 +48,11 @@
     .windowBox .windowContent .windowDiv{width:100%;height:100%;border-radius: 10px;background: #fff;}
     .windowBox .windowContent .newsDiv{width:100%;height:8%;border-radius: 10px;background: #fff;margin-top:15px;padding:10px;}
     .windowBox .windowContent .newsDiv .icon{position: relative;}
-    .windowBox .windowContent .newsDiv .icon:after{content:'';position: absolute;right: -14px;top: 1px;width: 1px;height: 18px;background: {$websites['color']};}
+    .windowBox .windowContent .newsDiv .icon:after{content:'';position: absolute;right: -14px;top: 1px;width: 1px;height: 18px;background: {$data['websites']['info']['color']};}
     .windowBox .windowContent .newsDiv .icon img{width: 20px;}
     .windowBox .windowContent .newsDiv .newsContent{width: 100%;margin-left: 25px;}
     .windowBox .windowContent .newsDiv .newsContent .cont7{height:20px;overflow: hidden;}
-    .windowBox .windowContent .newsDiv .newsContent .cont7 a{font-size: 15px;color:{$websites['color']};display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 1;overflow: hidden;text-overflow: ellipsis;}
+    .windowBox .windowContent .newsDiv .newsContent .cont7 a{font-size: 15px;color:{$data['websites']['info']['color']};display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 1;overflow: hidden;text-overflow: ellipsis;}
 </style>
 
 <!--右侧滑动-->
@@ -60,17 +60,17 @@
     <div class="leftList">
         <div class="topArrow" onclick="topArrow('left',1)"></div>
         <div class="leftCont">
-            {foreach name="websites['leftFrame']" key="k" id="v")
-            <div class="leftItem" onclick="showWindows({$v['id']},{$v['type']},this)">
-                <img src="https://shop.gogo198.cn/{$v['icon']}" alt="">
-                <p class="f12">{$v['name']}</p>
-            </div>
-            <div class="leftLine"></div>
-            {if $k==0}
-            <div class="turnDown" onclick="checkStartFace(this)">
-                <img src="img/turndown.png" alt="">
-            </div>
-            {/if}
+            {foreach name="data['websites']['leftFrame']" key="k" id="v")
+                <div class="leftItem" onclick="showWindows({$v['id']},{$v['type']},this)">
+                    <img src="https://shop.gogo198.cn/{$v['icon']}" alt="">
+                    <p class="f12">{$v['name']}</p>
+                </div>
+                <div class="leftLine"></div>
+                {if $k==0}
+                    <div class="turnDown" onclick="checkStartFace(this)">
+                        <img src="img/turndown.png" alt="">
+                    </div>
+                {/if}
             {/foreach}
         </div>
         <div class="btmArrow" onclick="btmArrow('left',1)"></div>
@@ -103,12 +103,13 @@
     var leftContentHeight = 0;
     var rightContentHeight = 0;
     $(document).ready(function() {
-    {if isset($isframe)}
-        {if $isframe==1}
-            $('.startFace').hide();
+        {if isset($isframe)}
+            {if $isframe==1}
+                $('.startFace').hide();
+            {/if}
         {/if}
-    {/if}
-            //左侧浮动框高度
+
+        //左侧浮动框高度
         let leftItemHeight = Math.round($('.left-contents .leftItem').length * $('.left-contents .leftItem').eq(0).outerHeight() * 100) / 100;
         let leftLineHeight = Math.round(($('.left-contents .leftLine').length * $('.left-contents .leftLine').eq(0).outerHeight()) + ($('.left-contents .leftLine').length * 18) * 100) / 100;
         leftContentHeight = Math.floor(Math.round((leftItemHeight + leftLineHeight) * 100) /100);
