--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -255,6 +255,7 @@
 {include file="common/footer"}
 <script type="text/javascript" charset="utf-8">
     $(function(){
+        $('body').css('background',"{$website['color_inner']}");
         // 卡片悬停效果增强
         $('.content-card').hover(
             function() {
