--- a/application/index/view/common/header1.html
+++ b/application/index/view/common/header1.html
@@ -6,9 +6,12 @@
     <title>{$website['title']}</title>
     <meta name="facebook-domain-verification" content="g8f97gl1a53q5kfh649b8x1ro6w752" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
     <meta name="description" content="{$website['description']}" />
     <meta name="keywords" content="{$website['keywords']}" />
+    {:$website['website_canonical']}
+    {:$website['website_og']}
     <!-- css -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
