--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -1,4 +1,5 @@
 {include file="common/header1"}
+{include file="index/detail_schema" /}
 <link href="css/gallery-1.css" rel="stylesheet">
 <link rel="stylesheet" href="layui/css/layui.css">
 <script src="layui/layui.js"></script>
