--- a/application/index/view/common/header1.html
+++ b/application/index/view/common/header1.html
@@ -185,7 +185,7 @@
                             <ul class="submenu">
                                 <li class="subitem"><a href="//dtc.gogo198.net/?s=index/website_manage" target="_blank" class="sublink f16">商家后台</a></li>
                                 <li class="subitem"><a href="https://boss.gogo198.cn/?s=index/member_login&uid=<?php echo base64_encode(session('account.id'));?>" target="_blank" class="sublink f16">个人中心</a></li>
-                                <li class="subitem"><a href="/?s=index/change_account" class="sublink f16">切换账号</a></li>
+                                <li class="subitem"><a href="/?s=index/change_account&company_id={$company_id}&company_type={$company_type}" class="sublink f16">切换账号</a></li>
                             </ul>
                         </li>
                     {else}
