--- a/application/index/view/layouts/header2.html
+++ b/application/index/view/layouts/header2.html
@@ -186,7 +186,7 @@
                         <ul class="dropdown-menu" style="min-width: 200px;">
                             <li><a href="/?s=index/website_manage" class="f15 common_inner_background" target="_blank">&gt;商家后台</a></li>
                             <li><a href="//boss.gogo198.cn/?s=index/member_login&shop_uid=<?php echo base64_encode(session('account.id'));?>" class="f15 common_inner_background" target="_blank">&gt;个人中心</a></li>
-                            <li><a href="/?s=index/change_account" class="f15 common_inner_background">&gt;切换账号</a></li>
+                            <li><a href="/?s=index/change_account&company_id={$company_id}&company_type={$company_type}" class="f15 common_inner_background">&gt;切换账号</a></li>
                         </ul>
                     </li>
                     {else}
@@ -290,7 +290,7 @@
                         <ul class="dropdown-menu" style="min-width: 200px;">
                             <li><a href="/?s=index/website_manage" class="f15 common_inner_background" target="_blank">&gt;商家后台</a></li>
                             <li><a href="//boss.gogo198.cn/?s=index/member_login&shop_uid=<?php echo base64_encode(session('account.id'));?>" class="f15 common_inner_background" target="_blank">&gt;个人中心</a></li>
-                            <li><a href="/?s=index/change_account" class="f15 common_inner_background">&gt;切换账号</a></li>
+                            <li><a href="/?s=index/change_account&company_id={$company_id}&company_type={$company_type}" class="f15 common_inner_background">&gt;切换账号</a></li>
                         </ul>
                     </li>
                     {else}
