--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -106,11 +106,11 @@
         <div class="container detail_container">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li><a href="/">首頁</a></li>
+                <li><a href="/">首页</a></li>
                 {if !empty($navbar_menu)}
                 <li><a href="#">{$navbar_menu}</a></li>
                 {/if}
-                <li class="active">{$data.title|default="文章詳情"}</li>
+                <li class="active">{$data.title|default="详情"}</li>
               </ol>
             </nav>
             {if !empty($navbar_menu)}
