--- a/application/index/view/index/shop_frontend/goods_list.html
+++ b/application/index/view/index/shop_frontend/goods_list.html
@@ -689,7 +689,7 @@
         let name = '';
         if(typ==1) {
             main_html = $('.selector_box').html();
-            name='按类别';
+            name='按类别1';
         }
         else if(typ==2) {
             main_html = $('.fields_div').html();
@@ -723,7 +723,7 @@
                 '            </div>'+
                 '       </div>';
 
-                var area = ['330px', '200px'];
+                var area = ['600px', '433px'];
                 if(IsPhone()){
                     area = ['100%', '350px'];
                 }
