--- a/application/index/view/index/shop_frontend/goods_list.html
+++ b/application/index/view/index/shop_frontend/goods_list.html
@@ -247,7 +247,7 @@
                         </div>
                     </div>
 
-                    <div class="searchContent">
+                    <div class="searchContent" style="display: none;">
                         <div class="inputBox" onclick="view_moreInfo(this)">
                             查看更多分类&gt;&gt;
                         </div>
@@ -689,7 +689,7 @@
         let name = '';
         if(typ==1) {
             main_html = $('.selector_box').html();
-            name='按类别1';
+            name='按类别';
         }
         else if(typ==2) {
             main_html = $('.fields_div').html();
@@ -718,8 +718,8 @@
                 '                 </div>'+
                 '                 <div class="page_content">'+
                 '                      <div class="leftContent">'+main_html+'</div>'+
-                '                      <div class="rightContent"></div>';
-                '                 </div>';
+                '                      <div class="rightContent"></div>'+
+                '                 </div>'+
                 '            </div>'+
                 '       </div>';
 
@@ -732,7 +732,7 @@
                     type: 1,
                     title: '<div class="disf"><div class="exclamation-circle"><span>!</span></div>系统提示：'+name+'</div>',
                     area: area,
-                    content: main_html
+                    content: html
                 });
 
                 setTimeout(function(){
