--- a/application/index/view/index/shop_frontend/goods_list.html
+++ b/application/index/view/index/shop_frontend/goods_list.html
@@ -247,11 +247,11 @@
                         </div>
                     </div>
 
-                    <div class="searchContent" style="display: none;">
-                        <div class="inputBox" onclick="view_moreInfo(this)">
-                            查看更多分类&gt;&gt;
-                        </div>
-                    </div>
+<!--                    <div class="searchContent" style="display: none;">-->
+<!--                        <div class="inputBox" onclick="view_moreInfo(this)">-->
+<!--                            查看更多分类&gt;&gt;-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
 
                 <!--自定义字段-->
@@ -295,11 +295,11 @@
                                             </div>
                                         </div>
 
-                                        <div class="searchContent" style="display: none;">
-                                            <div class="inputBox" onclick="view_moreInfo(this)">
-                                                查看更多价格&gt;&gt;
-                                            </div>
-                                        </div>
+<!--                                        <div class="searchContent" style="display: none;">-->
+<!--                                            <div class="inputBox" onclick="view_moreInfo(this)">-->
+<!--                                                查看更多价格&gt;&gt;-->
+<!--                                            </div>-->
+<!--                                        </div>-->
                                     {elseif($v['stype']==2)}
                                         <!--下拉选择-->
 
