--- a/application/index/view/index/shop_frontend/goods_list.html
+++ b/application/index/view/index/shop_frontend/goods_list.html
@@ -523,11 +523,11 @@
 
                     <div id="pagination" style="text-align: center;"></div>
 
-                    <div class="searchContent">
-                        <div class="inputBox" onclick="showWindows(21,2,this)">
-                            更多&gt;&gt;
-                        </div>
-                    </div>
+<!--                    <div class="searchContent">-->
+<!--                        <div class="inputBox" onclick="showWindows(21,2,this)">-->
+<!--                            更多&gt;&gt;-->
+<!--                        </div>-->
+<!--                    </div>-->
                     {else}
                     <div class="noresult-content">
                         <img loading="lazy" alt="GOGO198 網站圖片" src="https://cbu01.alicdn.com/cms/upload/2013/909/997/1799909_1367035968.png" >
