--- a/application/index/view/index/shop_frontend/goods_list.html
+++ b/application/index/view/index/shop_frontend/goods_list.html
@@ -43,9 +43,9 @@
     .high_search .rightVal .valItem_act{color:#e60000;}
     .high_search .rightVal .valItem:hover{color:#e60000;}
     .high_search .rightVal .loadmore_search{position: absolute;top: 4px;right: 4px;font-size: 13px;padding: 3px 8px;display: flex;align-items: center;color:{$data['websites']['info']['color_word']};border:1px solid {$data['websites']['info']['color_word']};cursor:pointer;transition: all 0.3s ease;}
-    .high_search .rightVal .loadmore_search .more_icon{width:7px;height:7px;border-top:1px solid {$data['websites']['info']['color_word']};border-right:1px solid {$data['websites']['info']['color_word']};transform: rotate(135deg);margin-left:5px;background:{$data['websites']['info']['color_word']};}
-    .high_search .rightVal .loadmore_search2 {position: absolute;top: 4px;right: 4px;font-size: 13px;padding: 3px 8px;display: flex;align-items: center;border:1px solid {$data['websites']['info']['color']};cursor:pointer;transition: all 0.3s ease;}
-    .high_search .rightVal .loadmore_search2 .more_icon{width:7px;height:7px;border-top:1px solid {$data['websites']['info']['color']};border-right:1px solid {$data['websites']['info']['color']};transform: rotate(315deg);margin-left:5px;background:{$data['websites']['info']['color_word']}fff;}
+    .high_search .rightVal .loadmore_search .more_icon{width:7px;height:7px;border-top:1px solid {$data['websites']['info']['color_word']};border-right:1px solid {$data['websites']['info']['color_word']};transform: rotate(135deg);margin-left:5px;}
+    .high_search .rightVal .loadmore_search2 {position: absolute;top: 4px;right: 4px;font-size: 13px;padding: 3px 8px;display: flex;align-items: center;color:{$data['websites']['info']['color_word']};border:1px solid {$data['websites']['info']['color_word']};cursor:pointer;transition: all 0.3s ease;}
+    .high_search .rightVal .loadmore_search2 .more_icon{width:7px;height:7px;border-top:1px solid {$data['websites']['info']['color_word']};border-right:1px solid {$data['websites']['info']['color_word']};transform: rotate(315deg);margin-left:5px;background:{$data['websites']['info']['color_word']};}
 
     /**已选条件**/
     .selected{margin-top:15px;/**padding:5px 15px;**/padding-right:0px;box-sizing: border-box;border-top: 1px solid #bebebe;border-bottom: 1px solid #bebebe;}
