--- a/application/index/view/index/website_manage.html
+++ b/application/index/view/index/website_manage.html
@@ -352,13 +352,13 @@
                                                     html2 += 'digital';
                                                 }
                                             }
-
+                                            // +res.list.domain_name2+
                                             if (res.list2[i].id == 319) {
-                                                html2 += '<a href="http://website.'+res.list.domain_name2+'.gogo198.net" target="_blank" class="site-url">website.' + res.list.domain_name2 + '.gogo198.net</a>';
+                                                html2 += '<a href="http://dtc.gogo198.net/?s=index/merch_website_index&company_id='+company_id+'&company_type=1" target="_blank" class="site-url">dtc.gogo198.net/?s=index/merch_website_index&company_id='+company_id+'&company_type=1</a>';
                                             }
 
                                             if (res.list2[i].id == 320) {
-                                                html2 += '<a href="http://shop.'+res.list.domain_name2+'.gogo198.net" target="_blank" class="site-url">shop.' + res.list.domain_name2 + '.gogo198.net</a>';
+                                                html2 += '<a href="http://dtc.gogo198.net/?s=merch/merch_shop_index&company_id='+company_id+'&company_type=0" target="_blank" class="site-url">dtc.gogo198.net/?s=index/merch_website_index&company_id='+company_id+'&company_type=1</a>';
                                             }
                                         }
                                         html2 += '            </div>\n';
