--- a/application/index/view/index/website_manage.html
+++ b/application/index/view/index/website_manage.html
@@ -354,11 +354,11 @@
                                             }
                                             // +res.list.domain_name2+
                                             if (res.list2[i].id == 319) {
-                                                html2 += '<a href="http://dtc.gogo198.net/web/?company_id='+company_id+'&company_type=1" target="_blank" class="site-url" style="word-break:break-all;">dtc.gogo198.net/web/?company_id='+company_id+'&company_type=1</a>';
+                                                html2 += '<a href="http://dtc.gogo198.net/web?company_id='+company_id+'&company_type=1" target="_blank" class="site-url" style="word-break:break-all;">dtc.gogo198.net/web?company_id='+company_id+'&company_type=1</a>';
                                             }
 
                                             if (res.list2[i].id == 320) {
-                                                html2 += '<a href="http://dtc.gogo198.net/shop/?company_id='+company_id+'&company_type=0" target="_blank" class="site-url" style="word-break:break-all;">dtc.gogo198.net/shop/?company_id='+company_id+'&company_type=0</a>';
+                                                html2 += '<a href="http://dtc.gogo198.net/shop?company_id='+company_id+'&company_type=0" target="_blank" class="site-url" style="word-break:break-all;">dtc.gogo198.net/shop?company_id='+company_id+'&company_type=0</a>';
                                             }
                                         }
                                         html2 += '            </div>\n';
