--- a/application/index/view/common/header2.html
+++ b/application/index/view/common/header2.html
@@ -211,7 +211,7 @@
                         <a href="#" class="nav-link f18 has-submenu">GoFriend <i class="fas fa-chevron-down"></i></a>
                         <ul class="submenu">
                             <li class="subitem">
-                                <a href="/admin?cid={$website['company_id']}" class="sublink f16">
+                                <a href="/admin?cid={$company_id}" class="sublink f16">
                                     <i class="fas fa-sitemap"></i>
                                     站点管理
                                 </a>
