--- a/application/index/view/layouts/header2.html
+++ b/application/index/view/layouts/header2.html
@@ -288,7 +288,7 @@
                     <li class="dropdown dd_parent" onclick="javascript:removeclass(this);">
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle f20" style="text-transform:unset;">GoFriend <b class="caret"></b></a>
                         <ul class="dropdown-menu" style="min-width: 200px;">
-                            <li><a href="/admin?cid={$company_id}" class="f15 common_inner_background" target="_blank">&gt;商家后台</a></li>
+                            <li><a href="/admin?cid=<?php echo base64_encode($company_id);?>" class="f15 common_inner_background" target="_blank">&gt;商家后台</a></li>
                             <li><a href="//boss.gogo198.cn/?s=index/member_login&shop_uid=<?php echo base64_encode(session('account.id'));?>" class="f15 common_inner_background" target="_blank">&gt;个人中心</a></li>
                             <li><a href="/?s=index/change_account&company_id={$company_id}&company_type={$company_type}" class="f15 common_inner_background">&gt;切换账号</a></li>
                         </ul>
