--- a/application/index/view/common/header1.html
+++ b/application/index/view/common/header1.html
@@ -60,7 +60,7 @@
         header .navbar{background:unset;min-height: unset;}
         .navbar .nav-list {display: flex;align-items: center;list-style: none;}
         .nav-item {margin: 0 18px; /* 主菜单间距 */position: relative; /* 子菜单定位基准 */}
-        .nav-link {text-decoration: none;color: #333;font-size: 16px;padding: 10px 0;display: block;transition: color 0.3s ease; /* 颜色过渡 */}
+        .nav-link {text-decoration: none;color: #333;font-size: 16px;padding: 10px 0;display: block;transition: color 0.3s ease; color:{$website['color_word']};/* 颜色过渡 */}
         .nav-link:hover {color: var(--primary-color); /* hover时蓝色 */}
 
         /* 二级子菜单样式 */
